--- a/app/assets/styles.css
+++ b/app/assets/styles.css
@@ -25,8 +25,8 @@ body {
     border-radius: 10px;
     text-align: center;
     opacity: 0.7;
-    width: 200px;
-    height: 150px;
+    width: 150px;
+    height: 125px;
 }
 
 .item-padding {
@@ -68,7 +68,7 @@ body {
 }
 
 .steam {
-    background-image: url('steam.jpg');
+    background-image: url('steam.png');
 }
 
 .video-container {
@@ -80,14 +80,11 @@ body {
 
 #background-video {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
+    top: -100px;
+    left: 0;
     width: auto;
     height: auto;
     z-index: -1;
-    transform: translate(-50%, -50%);
     background-size: cover;
 }
 
