--- a/app/assets/styles.css
+++ b/app/assets/styles.css
@@ -80,10 +80,10 @@ body {
 
 #background-video {
     position: absolute;
-    top: -100px;
+    top: 0;
     left: 0;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     z-index: -1;
     background-size: cover;
 }
